...
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="titulo"
            android:text="@{article.title}"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnSaveButton"
            app:layout_constraintStart_toEndOf="@+id/imgArticle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="0dp"
...
